# smart_esprit

./: callbacks.c  callbacks.h  capteur.c  capteur.h
smart/smart/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  smart.glade  smart.gladep
smart/smart/autom4te.cache/: output.1  requests  traces.0  traces.1
smart/smart/po/: Makefile  Makefile.in
smart/smart/src/: AGF.c  AGF.h  AGF.txt  AGFtemp.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  smart  timeee.c  timeee.h
smart/smart/src/.deps/: AGF.Po  callbacks.Po  main.Po  timeee.Po
